Creation of the button component empty

--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
 </head>
 <body>
     
+    <div class="main">
+
+        <div class="section1">
+
+            <my-button>  </my-button>
+
+        </div>
+
+
+        <div class="section2">
+
+        </div>
+    </div>
+
 </body>
 </html>
