added attributes of the component

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
         <div class="section1">
 
-            <my-button>  </my-button>
-
+            <my-button text="saludos" variant="hola" disabled>  </my-button>
+            
+            <my-button></my-button>
         </div>
 
 
