add footer desing and change the readme

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 
 </body>
 <footer>
-   <p>created by<a href="https://devchallenges.io/portfolio/LeonelHolguin"><b><u>LeonelHolguin</u></b><a></a>- devChallenges.io</p> 
+    <p>Icons: <a href="https://fonts.google.com/icons" target="_blank">https://fonts.google.com/icons</a></p>
+    <p>created by<a href="https://devchallenges.io/portfolio/LeonelHolguin" target="_blank"><b><u>LeonelHolguin</u></b><a></a>- devChallenges.io</p> 
 </footer>
 </html>
