--- a/index.html
+++ b/index.html
@@ -6,24 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button component</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="/index.js"></script>
+    <script src="./index.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Poppins&family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
-
     <section class="main">
-
         <section class="head">
             <h1>Buttons</h1>
         </section>
-            
+        
         <section class="content">
-
             <div class="buttonDefault">
-
                 <article class="hoverOff">
                     <h2> < Button /> </h2>
                     <my-button></my-button>
@@ -36,7 +32,6 @@
             </div>
 
             <div class="buttonVariant">
-
                 <div class="outline">
                     <article class="hoverOff">
                         <h2>< Button variant="outline" /></h2>
@@ -94,7 +89,6 @@
             </div>
 
             <div class="buttonSize">
-
                 <article class="sm">
                     <h2>< Button size="sm" /></h2>
                     <my-button color="primary" size="sm"></my-button>
@@ -160,10 +154,9 @@
             </div>
         </section>
     </section>
-
+    <footer>
+        <p>Icons: <a href="https://fonts.google.com/icons" target="_blank">https://fonts.google.com/icons</a></p>
+        <p>created by<a href="https://devchallenges.io/portfolio/LeonelHolguin" target="_blank"><b><u>LeonelHolguin</u></b><a></a>- devChallenges.io</p> 
+    </footer>
 </body>
-<footer>
-    <p>Icons: <a href="https://fonts.google.com/icons" target="_blank">https://fonts.google.com/icons</a></p>
-    <p>created by<a href="https://devchallenges.io/portfolio/LeonelHolguin" target="_blank"><b><u>LeonelHolguin</u></b><a></a>- devChallenges.io</p> 
-</footer>
 </html>
